# ASLS

./: .gitignore  CMakeLists.txt  README.md
res/: genome.json
scripts/: run.sh
src/: CMakeLists.txt
src/graphics/: control.h  control.hpp  entities.cpp  entities.h  entities.hpp  entity.cpp  entity.h  entity.hpp  food.cpp  food.h  foods.cpp  foods.h  groupcontrol.h
src/graphics/controls/: control.hpp  entities.cpp  entities.hpp  entity.hpp  groupcontrol.hpp
src/graphics/ui/: brain.cpp  brain.hpp
src/main/: app.cpp  app.h  brain.cpp  brain.h  brain.hpp  common.h  common.h.in  configreader.cpp  configreader.h  configreader.hpp  main.cpp  misc.h  misc.hpp  mymath.h  mymath.hpp  simulation.cpp  simulation.h  simulation.hpp  stats.cpp  stats.h  vc.cpp  vc.h
src/models/: entitymodel.cpp  entitymodel.h  entitymodel.hpp  foodmodel.cpp  foodmodel.h  genome.cpp  genome.h  genome.hpp  model.h  model.hpp  solver.cpp  solver.h  solver.hpp
